syntax = "proto3";

import "entities/common.proto";

// https://docs.onflow.org/fcl/reference/api/#transaction-statuses
enum TransactionStatusCode {
  UNKNOWN = 0;
  /**
   * Transaction Pending - Awaiting Finalization
   */
  PENDING = 1;
  /**
   * Transaction Finalized - Awaiting Execution
   */
  FINALIZED = 2;
  /**
   * Transaction Executed - Awaiting Sealing
   */
  EXECUTED = 3;
  /**
   * Transaction Sealed - Transaction Complete. At this point the transaction
   * result has been committed to the blockchain.
   */
  SEALED = 4;
  /**
   * Transaction Expired
   */
  EXPIRED = 5;
}

message Transaction {
  string id = 1;
  string script = 2;
  string reference_block_id = 3;
  uint32 gas_limit = 4;
  string payer = 5;
  TransactionProposalKey proposal_key = 6;
  TransactionStatus status = 7;
  repeated CadenceObject args = 8;
  repeated string authorizers = 9;
  repeated SignableObject envelope_signatures = 10;
  repeated SignableObject payload_signatures = 11;
  string created_at = 12;
  string updated_at = 13;
}

message TransactionProposalKey {
  string address = 1;
  int32 key_id = 2;
  int32 sequence_number = 3;
}

message SignableObject {
  string address = 1;
  int32 key_id = 2;
  string signature = 3;
}

message TransactionStatus {
  TransactionStatusCode status = 1;
  // I think status_code represents GRCP status code
  // https://grpc.github.io/grpc/core/md_doc_statuscodes.html
  int32 status_code = 2;
  string error_message = 3;
}
